--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,14 @@
         "target": "es2017",
         "module": "commonjs",
         "outDir": "dist",
-        "types": ["node"]
+        "types": [
+            "node"
+        ],
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "sourceMap": true
     },
-    "include": ["src/**/*"]
+    "include": [
+        "src/**/*"
+    ],
 }
