--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc && node dist/src/index.js | pino-pretty"
+    "start": "npx tsc && node dist/index.js | pino-pretty"
   },
   "author": "",
   "license": "ISC",
