--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "pino": "^9.4.0",
     "progress": "^2.0.3",
     "pug": "^3.0.3",
+    "serverless-http": "^3.2.0",
     "uuid": "^10.0.0"
   }
 }
