server: renommage du dossier racine de /api à /server + création du répertoire /api pour Vercel + création du fichier /api/index.ts pour assurer les fonctions serverless de Vercel

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,8 @@ node_modules/
 
 # production files
 /server/dist/
-/api/dist/
-# /api/src/routes/
 /client/dist/
+
 # test data
 /data/
 
@@ -19,6 +18,9 @@ server/data/saves/
 img/*
 # include: github preview image
 !img/preview_0.1_SPA 3.jpg
+
+# tree.txt files
+*/tree.txt
 
 # environnement variables
 *.env
