--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,14 @@
 {
   "name": "meteor-song-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc && node dist/index.js | pino-pretty"
+    "build": "tsc",
+    "start": "npm run build && node dist/index.js | pino-pretty",
+    "dev": "nodemon --watch 'src/**/*.ts' --watch 'api/**/*.ts' --exec 'ts-node' api/index.ts",
+    "lint": "eslint 'src/**/*.{ts,js}' 'api/**/*.{ts,js}'",
+    "prepare": "npm run lint && npm run build"
   },
   "author": "",
   "license": "ISC",
