server: extension de la maxDuration des scripts index.ts,index.js

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -22,6 +22,12 @@
     "functions": {
         "api/index.js": {
             "maxDuration": 50
+        },
+        "dist/api/index.js":{
+            "maxDuration": 50
+        },
+        "api/index.ts": {
+            "maxDuration": 50
         }
     }
 }
