server:vercel.json:Ajout de maxDuration à de nouveaux fichiers index.js,.ts

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -28,6 +28,12 @@
         },
         "api/index.ts": {
             "maxDuration": 50
+        },
+        "index.js": {
+            "maxDuration": 50
+        },
+        "index.ts": {
+            "maxDuration": 50
         }
     }
 }
