--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "typescript-eslint": "^8.5.0"
   },
   "dependencies": {
+    "@netlify/functions": "^2.8.2",
     "@types/chroma-js": "^2.4.4",
     "@types/express": "^4.17.21",
     "@types/geojson": "^7946.0.14",
@@ -33,6 +34,7 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.6.2",
     "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
     "progress": "^2.0.3",
     "pug": "^3.0.3",
     "serverless-http": "^3.2.0",
