--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "meteor-song-server",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npm run build && node dist/index.js | pino-pretty",
+    "start": "npm run build && node dist/api/index.js | pino-pretty",
     "dev": "nodemon --watch 'src/**/*.ts' --watch 'api/**/*.ts' --exec 'ts-node' api/index.ts"
   },
   "author": "",
