server: Sécurisation des routes (authentification, limitation des tentatives)

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,8 @@
+ADMIN_USERNAME=the_admin_username_goes_here
+ADMIN_PASSWORD=the_admin_password_goes_here
+ADMIN_PASSWORD_HASH=the_password_hash_goes_here
+METEOR_SONG_SERVER_HOST_URL=app_server_host_url
+CLIENT_APP_ORIGIN_URL=client_app_origin_url
+
 MONGODB_CONNECTION_STRING=your_MongoDB_cluster_connection_string_goes_here;
 SERVER_PORT=the_port_exposed_to_access_server;
