--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@types/express-rate-limit": "^5.1.3",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
@@ -25,9 +26,11 @@
     "@types/geojson": "^7946.0.14",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.5.5",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
     "helmet": "^7.1.0",
     "mongoose": "^8.6.2",
     "pino": "^9.4.0",
